app/styles/_breakpoints.scss
@media(min-width: 0){
	
	// CSS PRESETS

	h1{
		font-size: 2em;
	}

	h3{
		font-size: 1.17em;
	}

	header{
		position: fixed;
		bottom: 0;
	}

	.head_btn_container{
		max-width: 400px;
	}

	.home_page_message{

		p{
			display: none;
		}
	}
	

	.mobile_tab_container{
		display: block;
	}

	.head_tab{
		padding: 1em 0.5em;
	 	padding-right: 0;
	}

	.user_added_tab{
		font-size: 0.9em;
		padding: 1.1em 0 1.2em 0.6em;
	}

	.ham_btn{
		display: block;
	}

	.submit_list_btn{
		display: none;
	}


	.least_rated, .user_added{
		display: none;
	}

	.list_row{

		h2{
			display: none;
		}
	}

	.list_poster{
		width: 150px;
		height: 250px;
	}


	.pre_footer_container{
		display: none;
	}

	.voting_container{
		width: 90%;
		max-width: 305px;
		margin: 2em auto 8em auto;
		float: none;
	}

	.fa-3x{
		display: inline;
	}

	.fa-2x{
		display: none;
	}


	footer{
		display: none;
	}





// LIST_PAGE_MAIN BREAKPOINTS
	
	.list_winner_container, .list_voter_info{
		width: 100%;
	}

	.list_winner_container{
		margin: 10% 2.5%;
	}

	.list_voter_info{
		margin-bottom: 30%;
	}

	.list_winner_img{
		width: 300px;
		margin: 0 auto;
		margin-top: 2em;
	}

	.show_list_items{
		display: block;
	}

	.list_items_container{
		display: none;
	}

	.vote_container{
		float: none;
	}

	.list_info{
		margin-top: 0;
		padding: 2em;
		padding-top: 0;
		float: none;

		h2{
			text-align: center;
		}
	}
	
	.mobile_size{
		display: block;
	}

	.desktop_size{
		display: none;
	}




// SUBMIT LIST PAGE
	.list_winner{
		margin: 0 auto;
	}

	.submit_user_input{
		margin: 8em auto;
	}

	.login_container{
		margin-bottom: 8em;
	}

	.login_page_container{
		
		h2{
			margin-top: 3em;
		}
	}

}





// LITERALLY JUST FOR USER_ADDED_TAB ONLY
@media(min-width: 417px){
	.user_added_tab{
		font-size: 1em;
		padding: 1em 0.5em;
		padding-right: 0;
	}
}





@media(min-width: 650px){
	
	// CSS PRESETS

	h1{
		font-size: 3em;
	}

	h3{
		font-size: 1em;
	}

	header{
		position: static;
		border-bottom: 2px solid $prim_color;
	}

	.head_btn_container{
		max-width: $max_container_width;
	}

	.mobile_tab_container{
		display: none;
	}
	

	.home_page_message{

		p{
			display: block;
			font-size: 1.5em;
		}
	}

	.ham_btn{
		display: none;
	}

	.submit_list_btn{
		display: block;
	}
	

	.least_rated, .user_added{
		display: block;
	}

	.list_row{
		h2{
			display: block;
		}
	}


	.list_poster{
		width: 90px;
		height: 150px;
	}

	.voting_container{
		width: 15%;
		margin: 0 2%;
		float: left;

		.fa-3x{
			display: none;
		}

		.fa-2x{
			display: inline;
		}
	}

	.up_vote, .down_vote{
		margin: 0 10%;
	}

	.up_vote{
		margin-left: 0;
		margin-right: 0;
	}

	.down_vote{
		margin-right: 0;
		margin-left: 0;
	}


	.pre_footer_container{
		display: block;
	}
	

	footer{
		display: block;
	}



// LIST_PAGE_MAIN BREAKPOINTS

	.list_winner_container, .list_voter_info{
		width: 45%;
		margin: 10% 2.5%;
	}

	.list_winner_img{
		width: 90%;
		margin: 0 auto;
	}

	.show_list_items{
		display: none;
		float: left;
	}

	.list_items_container{
		display: block;
	}

	.vote_container{
		float: left;
	}

	.list_info{
		margin-top: 10%;
		padding: 1em 2em;
		float: left;

		h2{
			text-align: left;
		}
	}

	.mobile_size{
		display: none;
	}

	.desktop_size{
		display: block;
	}



// SUBMIT LIST PAGE
	.submit_user_input{
		margin: 0 auto;
		margin-top: 8em;
		margin-bottom: 3em;
	}

	.login_container{
		margin-bottom: 10%;
	}

	.login_page_container{
		
		h2{
			margin-top: 2em;
		}
	}

}





@media(min-width: 1000px){
	
	// CSS PRESETS

	h1{
		font-size: 5em;
	}

	h3{
		font-size: 1.17em;
	}
	

	.home_page_message{

		p{
			font-size: 2em;
		}
	}


	.list_poster{
		width: 180px;
		height: 250px;
	}
	
	.voting_container{
		
		.fa-3x{
			display: inline;
		}

		.fa-2x{
			display: none;
		}
	}

}

